--- a/MinRW/index.html
+++ b/MinRW/index.html
@@ -78,6 +78,12 @@
    text-align: center;
    margin: auto;
 }
+.myEmail {
+   text-align:center; 
+   color:white;
+   padding:10px;
+   font-size: 18px;
+}
   </style>
 </head>
 
