--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
    text-align: center;
    margin: auto;
 }
+.myEmail {
+   text-align:center; 
+   color:white;
+   padding:10px;
+   font-size: 18px;
+}
   </style>
 </head>
 
