--- a/arch-linux/archlinux.html
+++ b/arch-linux/archlinux.html
@@ -28,7 +28,7 @@
         SHA256SUMS
     </a> 
     <br><br>
-    <a class="list-button" href="https://github.com/RezaxOnes/downloads.rezaxones.com/lastupdated.md" target="_blank">
+    <a class="list-button" href="https://github.com/RezaxOnes/downloads.rezaxones.com/blob/main/lastupdated.md" target="_blank">
         <i class="fa-solid fa-clock" style="margin-right: 8px;"></i>
         Last updated
     </a>
