--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       your first time visiting this website please make sure you have read The ReadMe</a>
   </h2>
   <a href="https://rezaxones.com/about.html" target="_blank"><i class="fa-solid fa-link"></i> About RezaxOnes</a>
-  <h2 class='incenter' style="font-size:20px;">Get In Touch With Our Team!</h2>
-  <div id="My_Email" class="myEmail"></div>
+  <h2 class='major' style="font-size:20px;">Get In Touch With Our Team!</h2>
+  <div id="My_Email" style="text-align:center; color:white; padding:10px; font-size: 18px;"></div>
+  <script src="https://downloads.rezaxones.com/script/email.js"></script>
   </footer>
   <!--Script-->
-  <script src="https://downloads.rezaxones.com/script/email.js"></script>
   <script>
     window.addEventListener('load', () => {
       document.body.classList.add('loaded');
