--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     //new addLink("Name", "Link address"),
       new addLink("Ubuntu", "https://downloads.rezaxones.com/ubuntu/ubuntu.html"),
       new addLink("Arch Linux", "https://downloads.rezaxones.com/arch-linux/archlinux.html"),
-      new addLink("Floating Clock VN", "https://downloads.rezaxones.com/Floating-Clock-VN/floating_clock_VN.html")
+      new addLink("Floating Clock VN", "https://downloads.rezaxones.com/Floating-Clock-VN/floating_clock_VN.html"),
+      new addLink("TestDisk", "https://downloads.rezaxones.com/testdisk/testdisk.html")
     ];
   </script>
 
