add ventoy and rufus

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       new addLink("Ubuntu", "https://downloads.rezaxones.com/ubuntu/ubuntu.html"),
       new addLink("Arch Linux", "https://downloads.rezaxones.com/arch-linux/archlinux.html"),
       new addLink("Floating Clock VN", "https://downloads.rezaxones.com/Floating-Clock-VN/floating_clock_VN.html"),
-      new addLink("TestDisk", "https://downloads.rezaxones.com/testdisk/testdisk.html")
+      new addLink("TestDisk", "https://downloads.rezaxones.com/testdisk/testdisk.html"),
+      new addLink("Rufus", "https://downloads.rezaxones.com/rufus/rufus.html"),
+      new addLink("Ventoy", "https://downloads.rezaxones.com/ventoy/ventoy.html")
     ];
   </script>
 
