--- a/rufus/rufus.html
+++ b/rufus/rufus.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Downloads Floating Clock VN</title>
+    <title>Downloads Rufus</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rezaxones.com/storage/rezaxones_icon.png" rel="icon" type="image/png" />
@@ -12,18 +12,33 @@
     <meta property="og:description" content="Trang chủ của website rezaxones.com" />
     <meta property="og:image" content="https://rezaxones.com/storage/rezaxones_image.png" />
     <!---->
-    <link href="https://downloads.rezaxones.com/Floating-Clock-VN/fcVN.css" rel="stylesheet" />
+    <link href="https://downloads.rezaxones.com/rufus/rufus.css" rel="stylesheet" />
 </head>
 
 
 <body>
-    <h1>Download Floating Clock VN</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/floating-clock/FloatingClockVN.apk" target="_blank">
+    <h1>Download Rufus - V4.11</h1>
+    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11.exe" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
-        Download Floating Clock VN
+        Download Rufus (Windows)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/floating-clock/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11_x86.exe" target="_blank">
+        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
+        Download Rufus (Windows - x86)
+    </a>
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11p.exe" target="_blank">
+        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
+        Download Rufus (Windows - Portable)
+    </a>
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11_arm64.exe" target="_blank">
+        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
+        Download Rufus (Windows - Arm64)
+    </a>
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
     </a> 
