--- a/arch-linux/archlinux.html
+++ b/arch-linux/archlinux.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Downloads Ubuntu</title>
+    <title>Downloads Arch Linux</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rezaxones.com/storage/rezaxones_icon.png" rel="icon" type="image/png" />
