--- a/ventoy/ventoy.html
+++ b/ventoy/ventoy.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Downloads Floating Clock VN</title>
+    <title>Downloads Ventoy</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rezaxones.com/storage/rezaxones_icon.png" rel="icon" type="image/png" />
@@ -12,20 +12,35 @@
     <meta property="og:description" content="Trang chủ của website rezaxones.com" />
     <meta property="og:image" content="https://rezaxones.com/storage/rezaxones_image.png" />
     <!---->
-    <link href="https://downloads.rezaxones.com/Floating-Clock-VN/fcVN.css" rel="stylesheet" />
+    <link href="https://downloads.rezaxones.com/ventoy/ventoy.css" rel="stylesheet" />
 </head>
 
 
 <body>
-    <h1>Download Floating Clock VN</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/floating-clock/FloatingClockVN.apk" target="_blank">
+    <h1>Download Ventoy - V1.1.10</h1>
+    <a class="list-button" href="https://mirror.rezaxones.com/ventoy/version_1.1.10/ventoy-1.1.10-windows.zip" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
-        Download Floating Clock VN
+        Download Ventoy For Windows
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/floating-clock/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/ventoy/version_1.1.10/ventoy-1.1.10-linux.tar.gz" target="_blank">
+        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
+        Download Ventoy For Linux
+    </a>
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/ventoy/version_1.1.10/ventoy-1.1.10-livecd.iso" target="_blank">
+        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
+        Download Ventoy LiveCD
+    </a>
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/ventoy/version_1.1.10/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
+    </a> 
+    <br><br>
+    <a class="list-button" href="https://mirror.rezaxones.com/ventoy/version_1.1.10/README.md" target="_blank">
+        <i class="fa-brands fa-readme" style="margin-right: 8px;"></i>
+        README
     </a> 
     <br><br>
     <a class="list-button" href="https://github.com/RezaxOnes/downloads.rezaxones.com/blob/main/lastupdated.md" target="_blank">
