--- a/arch-linux/archlinux.html
+++ b/arch-linux/archlinux.html
@@ -18,12 +18,12 @@
 
 <body>
     <h1>Download Arch Linux - V01.12.2025</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/archlinux/01.12.2025/archlinux-2025.12.01-x86_64.iso" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/distro/archlinux/version_01.12.2025/archlinux-2025.12.01-x86_64.iso" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Arch Linux
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/ubuntu/version_24.04.3/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/distro/archlinux/version_01.12.2025/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
     </a> 
