--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       new addLink("Floating Clock VN", "https://downloads.rezaxones.com/Floating-Clock-VN/floating_clock_VN.html"),
       new addLink("TestDisk", "https://downloads.rezaxones.com/testdisk/testdisk.html"),
       new addLink("Rufus", "https://downloads.rezaxones.com/rufus/rufus.html"),
-      new addLink("Ventoy", "https://downloads.rezaxones.com/ventoy/ventoy.html")
+      new addLink("Ventoy", "https://downloads.rezaxones.com/ventoy/ventoy.html"),
+      new addLink("mingw-w64", "https://downloads.rezaxones.com/mingw-w64/mingw-w64.html"),
+      new addLink("msys2", "https://downloads.rezaxones.com/msys2/msys2.html")
     ];
   </script>
 
