--- a/mingw-w64/mingw-w64.html
+++ b/mingw-w64/mingw-w64.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Downloads Ventoy</title>
+    <title>Downloads Msys2</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rezaxones.com/storage/rezaxones_icon.png" rel="icon" type="image/png" />
@@ -12,35 +12,25 @@
     <meta property="og:description" content="Trang chủ của website rezaxones.com" />
     <meta property="og:image" content="https://rezaxones.com/storage/rezaxones_image.png" />
     <!---->
-    <link href="https://downloads.rezaxones.com/ventoy/ventoy.css" rel="stylesheet" />
+    <link href="https://downloads.rezaxones.com/mingw-w64/mingw-w64.css" rel="stylesheet" />
 </head>
 
 
 <body>
-    <h1>Download Ventoy - V1.1.10</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/bootable/ventoy/version_1.1.10/ventoy-1.1.10-windows.zip" target="_blank">
+    <h1>Download MinGW - V13.0.0</h1>
+    <a class="list-button" href="https://mirror.rezaxones.com/compiler/mingw-w64/version_13.0.0/mingw-w64-v13.0.0.zip" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
-        Download Ventoy For Windows
+        Download MinGW (ZIP)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/bootable/ventoy/version_1.1.10/ventoy-1.1.10-linux.tar.gz" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/compiler/mingw-w64/version_13.0.0/mingw-w64-v13.0.0.tar.bz2" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
-        Download Ventoy For Linux
+        Download MinGW (tar + bz2)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/bootable/ventoy/version_1.1.10/ventoy-1.1.10-livecd.iso" target="_blank">
-        <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
-        Download Ventoy LiveCD
-    </a>
-    <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/bootable/ventoy/version_1.1.10/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/compiler/mingw-w64/version_13.0.0/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
-    </a> 
-    <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/bootable/ventoy/version_1.1.10/README.md" target="_blank">
-        <i class="fa-brands fa-readme" style="margin-right: 8px;"></i>
-        README
     </a> 
     <br><br>
     <a class="list-button" href="https://github.com/RezaxOnes/downloads.rezaxones.com/blob/main/lastupdated.md" target="_blank">
