--- a/rufus/rufus.html
+++ b/rufus/rufus.html
@@ -18,27 +18,27 @@
 
 <body>
     <h1>Download Rufus - V4.11</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11.exe" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/bootable/rufus/version_4.11/rufus-4.11.exe" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Rufus (Windows)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11_x86.exe" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/bootable/rufus/version_4.11/rufus-4.11_x86.exe" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Rufus (Windows - x86)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11p.exe" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/bootable/rufus/version_4.11/rufus-4.11p.exe" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Rufus (Windows - Portable)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/rufus-4.11_arm64.exe" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/bootable/rufus/version_4.11/rufus-4.11_arm64.exe" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Rufus (Windows - Arm64)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/rufus/version_4.11/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/bootable/rufus/version_4.11/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
     </a> 
