--- a/ubuntu/ubuntu.html
+++ b/ubuntu/ubuntu.html
@@ -18,17 +18,17 @@
 
 <body>
     <h1>Download Ubuntu - V24.04.3</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/ubuntu/version_24.04.3/ubuntu-24.04.3-desktop-amd64.iso" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/distro/ubuntu/version_24.04.3/ubuntu-24.04.3-desktop-amd64.iso" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Ubuntu Desktop
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/ubuntu/version_24.04.3/ubuntu-24.04.3-live-server-amd64.iso" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/distro/ubuntu/version_24.04.3/ubuntu-24.04.3-live-server-amd64.iso" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download Ubuntu Server
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/ubuntu/version_24.04.3/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/distro/ubuntu/version_24.04.3/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
     </a> 
