--- a/testdisk/testdisk.html
+++ b/testdisk/testdisk.html
@@ -18,22 +18,22 @@
 
 <body>
     <h1>Download TestDisk - V22.02.2024</h1>
-    <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/22.2.2024/testdisk-7.2.win64.zip" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/version_22.2.2024/testdisk-7.2.win64.zip" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download TestDisk
     </a>
     <br><br>
-        <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/22.2.2024/testdisk-7.2.win.zip" target="_blank">
+        <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/version_22.2.2024/testdisk-7.2.win.zip" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download TestDisk (Win x32) 
     </a>
     <br><br>
-     <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/22.2.2024/testdisk-7.2.mac_intel_x86_64.tar.bz2" target="_blank">
+     <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/version_22.2.2024/testdisk-7.2.mac_intel_x86_64.tar.bz2" target="_blank">
         <i class="fa-solid fa-download" style="margin-right: 8px;"></i>
         Download TestDisk MacOS (intel)
     </a>
     <br><br>
-    <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/22.2.2024/SHA256SUMS.txt" target="_blank">
+    <a class="list-button" href="https://mirror.rezaxones.com/tools/testdisk/version_22.2.2024/SHA256SUMS.txt" target="_blank">
         <i class="fa-solid fa-check" style="margin-right: 8px;"></i>
         SHA256SUMS
     </a> 
